label Astro logo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import AstroLogo from '../components/AstroLogo.astro';
   <h1>hello buns!</h1>
   <div class='logos'>
     <img src='https://bun.sh/logo.png' alt='Bun logo' />
-    <AstroLogo class='svg' />
+    <AstroLogo class='svg' aria-label='Astro logo' />
   </div>
 
   <style is:global>
